# PriceAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  development_plan.md  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
benchmarks/: baseline.json  run_benchmarks.py
docker/: Dockerfile  requirements-harbor.txt
docs/: API.md  API_FREEZE.md  DEVELOPMENT.md  DEVELOPMENT_PROGRESS.md  DOCKER_HARBOR.md  MULTI_WINDOW_PLAN.md  PRICEAGENT.md  PRICING_ENGINES.md  RUN_DEMO.md
examples/: vanilla_pricing.py
examples/commodity/: lc_vanilla_call.yaml  lh_calibrate_historical.yaml  lh_calibrate_implied.yaml  lh_robustness_asf.yaml  lh_robustness_baseline.yaml  lh_vanilla_calibrated.yaml  lh_vanilla_call.yaml
examples/commodity/data/: lc2409.csv  lh2409.csv  lh_asf_shock.csv
scripts/: check_doc_links.py
src/derivkit/: __init__.py  engine_orchestrator.py
src/derivkit/api/: __init__.py  errors.py  facade.py
src/derivkit/contract/: __init__.py  output_contract.py
src/derivkit/core/: __init__.py  conventions.py  enums.py  interfaces.py  observable.py  rng.py
src/derivkit/data/: __init__.py  alignment.py  calendars.py  calibration.py  cn_calendar.py  market_env.py  schedule.py  series_loader.py  term_structures.py  tushare_loader.py  validators.py  volmodels.py
src/derivkit/data/adapters/: __init__.py  base.py  commodity.py  equity.py
src/derivkit/data/resources/: __init__.py  cn_holidays.json
src/derivkit/dsl/: __init__.py  loader.py  product_normalize.py  schema.py
src/derivkit/dsl/examples/: asian_geometric.yaml  barrier_down_and_in.yaml  barrier_up_and_out.yaml  digital_european.yaml  snowball_standard.yaml  snowball_standard_fdm.yaml  vanilla_european.yaml
src/derivkit/integ/: __init__.py  grading.py
src/derivkit/integ/sandbox_runner/: __init__.py  __main__.py
src/derivkit/integ/task_template/: instruction.md
src/derivkit/integ/tasks/: __init__.py
src/derivkit/pricing/: __init__.py  greeks.py
src/derivkit/pricing/engines/: __init__.py  analytic.py  analytic_asian.py  analytic_barrier.py  analytic_digital.py  fdm.py  fdm_snowball.py  mc.py  mc_asian.py  mc_barrier.py  mc_digital.py  mc_paths.py  mc_phoenix.py  mc_snowball.py  quad.py  quad_fcn.py  quad_fft_base.py  quad_snowball.py  tree.py
src/derivkit/verify/: __init__.py  oracle.py
src/priceagent/: __init__.py  __main__.py  agent.py  data_service.py  option_exchange_store.py  option_lookup.py  spec_builder.py  tools.py  tushare_client.py
src/priceagent/data/: option_exchange_defaults.json
tests/: conftest.py
tests/determinism/: test_reproducibility.py
tests/integration/: test_api.py  test_barrier_digital_asian.py  test_commodity_examples.py  test_commodity_robustness.py  test_cross_consistency.py  test_dsl_examples.py  test_night_session_alignment.py  test_priceagent.py  test_qfbench_tasks.py  test_sandbox_runner.py  test_snowball.py  test_snowball_quad.py
tests/unit/: test_alignment_validators.py  test_analytic.py  test_calibration.py  test_cn_calendar_schedule.py  test_core.py  test_fdm_grid.py  test_option_exchange_store.py  test_option_lookup.py  test_perf_kernels.py  test_product_normalize.py  test_series_loader.py  test_spec_builder.py  test_tushare_loader.py  test_w9_release.py
(+35 files in other folders)
