[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "derivkit"
version = "0.1.0"
description = "Derivatives modeling and solving components for LLM agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "DerivKit Team" }]
keywords = ["derivatives", "pricing", "quantitative-finance", "options"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "numba>=0.58",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "hypothesis>=6.90",
    "ruff>=0.1",
    "mypy>=1.7",
    "black>=23.12",
    "isort>=5.13",
    "types-PyYAML",
    "pandas-stubs",
]
llm = [
    "openai>=1.30",
    "python-dotenv>=1.0",
]
data = [
    "tushare>=1.4",
]
agent = [
    "openai>=1.30",
    "python-dotenv>=1.0",
    "tushare>=1.4",
]

[project.urls]
Homepage = "https://github.com/derivkit/derivkit"
Documentation = "https://derivkit.readthedocs.io"

[project.scripts]
priceagent = "priceagent.__main__:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/derivkit", "src/priceagent"]

[tool.hatch.build.targets.wheel.force-include]
"src/derivkit/data/resources/cn_holidays.json" = "derivkit/data/resources/cn_holidays.json"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "perf: performance benchmarks (non-blocking)",
    "integration: integration tests",
]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["derivkit"]
branch = true
# Numba JIT kernels are validated in tests/marked perf but are opaque to coverage.py
omit = [
    "*/tests/*",
    "*/integ/*",
    "*/perf/mc_kernels.py",
    "*/perf/pde_kernels.py",
    "*/perf/numerical.py",
    "*/perf/quad_fft.py",
]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
warn_unused_ignores = true
packages = ["derivkit", "priceagent"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*", "numba", "numba.*", "tushare", "tushare.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "derivkit.data.alignment",
    "derivkit.data.calibration",
    "derivkit.pricing.engines.*",
    "derivkit.pricing.perf.*",
    "derivkit.pricing.products.snowball",
]
disable_error_code = ["operator", "index", "arg-type", "attr-defined", "assignment"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"src/derivkit/pricing/engines/__init__.py" = ["E402"]
